feat: add event routes
